--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-  </head>
-  <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
-  </body>
+    <link rel='stylesheet' href='/css/style.css'/>
+    <script src="/js/jquery-3.2.1.min.js"></script>
+</head>
+<body>
+<div id="APP"></div>
+<script src="/js/<%= file %>"></script>
+</body>
 </html>
