--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,13 +2,16 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
     <title><%= title %></title>
-    <link rel='stylesheet' href='/css/style.css'/>
-    <script src="/js/jquery-3.2.1.min.js"></script>
+    <link rel='stylesheet' href='/dist/css/bootstrap.min.css'/>
+    <link rel='stylesheet' href='/dist/css/bootstrap-theme.min.css'/>
+    <link rel='stylesheet' href='/dist/css/style.css'/>
+    <script src="/dist/js/jquery.min.js"></script>
+    <script src="/dist/js/jquery.twbsPagination.min.js"></script>
+    <script src="/dist/js/bootstrap.min.js"></script>
 </head>
 <body>
 <div id="APP"></div>
-<script src="/js/<%= file %>"></script>
+<script src="/dist/js/<%= file %>"></script>
 </body>
 </html>
