--- a/public/src/scss/style.scss
+++ b/public/src/scss/style.scss
@@ -46,6 +46,13 @@
     cursor: pointer;
     font-size: 20px;
 }
+.remove-new {
+    position: fixed;
+    right: 50px;
+    top: 70px;
+    cursor: pointer;
+    font-size: 20px;
+}
 
 pre {
     padding: 20px;
